tests/ui/test_generic_value_try_into.rs
use shorthand::ShortHand;

#[derive(ShortHand)]
#[shorthand(enable(try_into))]
struct DoNotDoThis<VALUE> {
    value: VALUE,
}

fn main() {}
